--- a/package.json
+++ b/package.json
@@ -1,27 +1,36 @@
 {
-  "name": "vxIcons",
+  "name": "blank-project",
   "version": "1.0.0",
-  "description": "Vlasterx Font Icons",
+  "description": "Blank project skeleton",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "^3.8.10",
-    "gulp-autoprefixer": "^2.0.0",
+    "gulp": "latest",
+    "gulp-autoprefixer": "^2.1.0",
+    "gulp-browserify": "^0.5.1",
     "gulp-cleancss": "^0.2.2",
+    "gulp-concat": "^2.4.3",
     "gulp-cssmin": "^0.1.6",
+    "gulp-group-css-media-queries": "^1.0.0",
     "gulp-iconfont": "^1.0.0",
     "gulp-iconfont-css": "0.0.9",
+    "gulp-insert": "^0.4.0",
+    "gulp-jshint": "^1.9.0",
+    "gulp-json-sass": "0.0.2",
+    "gulp-kss": "0.0.2",
     "gulp-rename": "^1.2.0",
-    "gulp-resolver": "^0.1.1",
+    "gulp-resolver": "^0.2.0",
     "gulp-rimraf": "^0.1.1",
-    "gulp-sass": "^1.2.4",
+    "gulp-ruby-sass": "^1.0.0-alpha.3",
+    "gulp-sass": "^1.3.3",
     "gulp-shell": "^0.2.11",
-    "kss": "^1.3.0",
+    "gulp-uglify": "^1.1.0",
+    "kss": "^2.0.2",
     "run-sequence": "^1.0.2",
     "uglifycss": "^0.0.11",
     "vinyl-source-stream": "^1.0.0"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/Vlasterx/vxFontIcons.git"
+    "url": "https://vlasterx@bitbucket.org/dizajnninja/nexus-blank-project.git"
   }
 }
