--- a/package.json
+++ b/package.json
@@ -4,30 +4,32 @@
   "description": "Nexus Font Icons",
   "dependencies": {},
   "devDependencies": {
-    "gulp": "latest",
-    "gulp-autoprefixer": "^2.1.0",
-    "gulp-browserify": "^0.5.1",
-    "gulp-cleancss": "^0.2.2",
-    "gulp-concat": "^2.4.3",
-    "gulp-cssmin": "^0.1.6",
-    "gulp-group-css-media-queries": "^1.0.0",
-    "gulp-iconfont": "^1.0.0",
-    "gulp-iconfont-css": "0.0.9",
-    "gulp-insert": "^0.4.0",
-    "gulp-jshint": "^1.9.0",
-    "gulp-json-sass": "0.0.2",
-    "gulp-kss": "0.0.2",
-    "gulp-rename": "^1.2.0",
-    "gulp-resolver": "^0.2.0",
-    "gulp-rimraf": "^0.1.1",
-    "gulp-ruby-sass": "^1.0.0-alpha.3",
-    "gulp-sass": "^1.3.3",
-    "gulp-shell": "^0.2.11",
-    "gulp-uglify": "^1.1.0",
-    "kss": "^2.0.2",
-    "run-sequence": "^1.0.2",
-    "uglifycss": "^0.0.11",
-    "vinyl-source-stream": "^1.0.0"
+ 	  "cli-color": "^1.0.0",
+      "gulp": "latest",
+      "gulp-autoprefixer": "^2.1.0",
+      "gulp-browserify": "^0.5.1",
+      "gulp-cleancss": "^0.2.2",
+      "gulp-concat": "^2.4.3",
+      "gulp-cssmin": "^0.1.6",
+      "gulp-group-css-media-queries": "^1.0.0",
+      "gulp-iconfont": "^1.0.0",
+      "gulp-iconfont-css": "0.0.9",
+      "gulp-insert": "^0.4.0",
+      "gulp-jshint": "^1.9.0",
+      "gulp-json-sass": "0.0.2",
+      "gulp-kss": "0.0.2",
+      "gulp-rename": "^1.2.0",
+      "gulp-resolver": "^0.2.0",
+      "gulp-rimraf": "^0.1.1",
+      "gulp-ruby-sass": "^1.0.0-alpha.3",
+      "gulp-sass": "^1.3.3",
+      "gulp-shell": "^0.2.11",
+      "gulp-uglify": "^1.1.0",
+      "gulp-util": "^3.0.4",
+      "kss": "^2.0.2",
+      "run-sequence": "^1.0.2",
+      "uglifycss": "^0.0.11",
+      "vinyl-source-stream": "^1.0.0"
   },
   "repository": {
     "type": "git",
